# uor-labs

./: Dockerfile  Makefile  README.md  assembler.py  async_server.py  chunks.py  decoder.py  docker-compose.yml  generate_cli.py  primes.py  pyproject.toml  requirements.txt  run_server.py  server.py  server_cli.py  uor-cli.py  uor.py  uor_cli.py  vm.py  vm_cli.py
.github/workflows/: tests.yml
base/: chunks.py  primes.py  uor.py  vm.py
benchmark/: suite.py
docs/: conf.py  index.rst  stdlib.rst  usage.rst
examples/: api_example.py  block_demo.asm  canonical_demo.py  countdown.asm  stdlib_examples.uors
tests/: benchmark_universal.py  test_analyzer.py  test_api.py  test_api_server.py  test_assembler.py  test_async_ipfs_storage.py  test_async_llm_client.py  test_async_server.py  test_benchmark.py  test_block.py  test_cache.py  test_call_stack.py  test_canonical_address.py  test_checkpoint.py  test_cli_factory.py  test_cli_generate.py  test_cli_ipfs.py  test_cli_profile.py  test_cli_universal.py  test_coherence_validator.py  test_compiler.py  test_debug_atomic.py  test_debug_vm.py  test_decoder_universal.py  test_extended_runtime.py  test_factory.py  test_ipfs_storage.py  test_jit.py  test_jit_cache.py  test_llm_client.py  test_llm_integration.py  test_memory.py  test_new_instructions.py  test_ntt.py  test_optimized_primes.py  test_primes.py  test_profiler_api.py  test_templates.py  test_universal_number.py  test_uor_object.py  (+3 more)
tests/integration/: test_programs.py
uor/: __init__.py  addressing.py  api.py  api_server.py  async_llm_client.py  cache.py  debug.py  exceptions.py  fuzz.py  ipfs_storage.py  llm_client.py  memory.py  opcodes.py  parallel_universal.py  profiler.py  universal_number.py  uor_object.py
web/: assemble.html  generate.html  index.html  run.html  utils.js
(+38 files in other folders)
