[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "uor-labs"
version = "0.2.0"
description = "Pure UOR virtual machine and utilities"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "UOR Foundation"}]
requires-python = ">=3.11"
dependencies = [
    "ipfshttpclient~=0.8",
    "openai",
    "anthropic",
    "google-generativeai",
    "flask",
    "llama-cpp-python",
    "ollama-python",
    "fastapi",
    "uvicorn",
    "aiohttp",
    "pydantic>=2",
]

[project.scripts]
uor-cli = "uor_cli:main"
uor-compile = "uor.compiler.cli:main"
uor-vm = "vm_cli:main"
uor-generate = "generate_cli:main"
uor-server = "server_cli:main"

[tool.setuptools]
packages = [
    "uor",
    "uor.agents",
    "uor.compiler",
    "uor.uscript",
    "uor.jit",
    "uor.llm",
    "uor.vm",
]
py-modules = [
    "assembler",
    "async_server",
    "chunks",
    "decoder",
    "generate_cli",
    "primes",
    "server",
    "server_cli",
    "uor",
    "uor_cli",
    "vm",
    "vm_cli",
]
